--- a/util/package.json
+++ b/util/package.json
@@ -13,7 +13,8 @@
         "@babel/plugin-transform-runtime": "7.18.9",
         "babel-loader": "8.2.5",
         "webpack": "5.74.0",
-        "webpack-cli": "4.10.0"
+        "webpack-cli": "4.10.0",
+        "standard": "17.0.0"
     },
     "dependencies": {}
 }
