--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,12 @@
 	<parent>
 		<groupId>edu.iu.util</groupId>
 		<artifactId>iu-parent</artifactId>
-		<version>7.0.0-SNAPSHOT</version>
+		<version>7.0.0</version>
 		<relativePath />
 	</parent>
 
 	<artifactId>iu-js-parent</artifactId>
-	<version>0.7.0-SNAPSHOT</version>
+	<version>0.7.0</version>
 
 	<name>IU JavaScript Parent</name>
 	<packaging>pom</packaging>
