--- a/util/pom.xml
+++ b/util/pom.xml
@@ -4,7 +4,7 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
-		<groupId>edu.iu.util</groupId>
+		<groupId>edu.iu</groupId>
 		<artifactId>iu-js-parent</artifactId>
 		<version>0.7.3-SNAPSHOT</version>
 	</parent>
