--- a/util/pom.xml
+++ b/util/pom.xml
@@ -37,6 +37,16 @@
 				<artifactId>frontend-maven-plugin</artifactId>
 				<executions>
 					<execution>
+						<id>js-test</id>
+						<phase>test</phase>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run test</arguments>
+						</configuration>
+					</execution>
+					<execution>
 						<id>js-package-dev</id>
 						<phase>prepare-package</phase>
 						<goals>
