--- a/util/package.json
+++ b/util/package.json
@@ -17,7 +17,7 @@
         "standard": "17.1.0",
         "jest": "29.6.2",
         "jest-environment-jsdom": "29.6.2",
-        "node-xmlhttprequest": "1.0.4",
+        "jest-websocket-mock": "2.4.1",
         "express": "4.18.2"
     },
     "dependencies": {},
