--- a/util/package.json
+++ b/util/package.json
@@ -18,7 +18,8 @@
         "jest": "29.6.2",
         "jest-environment-jsdom": "29.6.2",
         "jest-websocket-mock": "2.4.1",
-        "express": "4.18.2"
+        "express": "4.18.2",
+        "node-fetch": "3.3.2"
     },
     "dependencies": {},
     "scripts": {
