--- a/util/package.json
+++ b/util/package.json
@@ -14,7 +14,15 @@
         "babel-loader": "9.1.3",
         "webpack": "5.88.2",
         "webpack-cli": "5.1.4",
-        "standard": "17.1.0"
+        "standard": "17.1.0",
+        "jest": "29.6.2",
+        "jest-environment-jsdom": "29.6.2",
+        "jest-websocket-mock": "2.4.1",
+        "express": "4.18.2",
+        "node-fetch": "3.3.2"
     },
-    "dependencies": {}
+    "dependencies": {},
+    "scripts": {
+        "test": "jest --coverage"
+    }
 }
