--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,6 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<parent>
-		<groupId>edu.iu</groupId>
-		<artifactId>iu-java-parent</artifactId>
-		<version>7.0.0-SNAPSHOT</version>
-		<relativePath />
-	</parent>
-
 	<groupId>edu.iu</groupId>
 	<artifactId>iu-js-parent</artifactId>
 	<version>0.7.3-SNAPSHOT</version>
@@ -17,11 +10,59 @@
 	<name>IU JavaScript Parent</name>
 	<packaging>pom</packaging>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
+	<distributionManagement>
+		<repository>
+			<name>IU Maven Repository</name>
+			<id>IUMaven</id>
+			<url>https://apps.iu.edu/nxs-prd/content/repositories/IUInternal</url>
+		</repository>
+		<snapshotRepository>
+			<name>IU Maven Snapshot Repository</name>
+			<id>IUMaven-Snapshot</id>
+			<url>https://apps.iu.edu/nxs-prd/content/repositories/IUInternal-Snapshot</url>
+		</snapshotRepository>
+	</distributionManagement>
+
 	<build>
+		<plugins>
+			<plugin>
+				<artifactId>maven-enforcer-plugin</artifactId>
+				<version>3.2.1</version>
+				<executions>
+					<execution>
+						<id>enforce-maven</id>
+						<goals>
+							<goal>enforce</goal>
+						</goals>
+						<configuration>
+							<rules>
+								<requireJavaVersion>
+									<version>20</version>
+								</requireJavaVersion>
+								<requireMavenVersion>
+									<version>3.9</version>
+								</requireMavenVersion>
+							</rules>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+
 		<pluginManagement>
 			<plugins>
 				<plugin>
+					<artifactId>maven-clean-plugin</artifactId>
+					<version>3.1.0</version>
+				</plugin>
+				<plugin>
 					<artifactId>maven-war-plugin</artifactId>
+					<version>3.3.2</version>
 					<configuration>
 						<failOnMissingWebXml>false</failOnMissingWebXml>
 					</configuration>
@@ -31,8 +72,8 @@
 					<artifactId>frontend-maven-plugin</artifactId>
 					<version>1.13.4</version>
 					<configuration>
-						<nodeVersion>v18.17.1</nodeVersion>
-						<npmVersion>9.6.7</npmVersion>
+						<nodeVersion>v20.5.1</nodeVersion>
+						<npmVersion>9.8.0</npmVersion>
 						<installDirectory>${project.build.directory}/js</installDirectory>
 					</configuration>
 					<executions>
@@ -67,6 +108,5 @@
 			</modules>
 		</profile>
 	</profiles>
-
 
 </project>
