STARCH-569 sample push, unprune some unused Maven settings

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,11 @@
 	<name>IU JavaScript Parent</name>
 	<packaging>pom</packaging>
 
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+	</properties>
+
 	<distributionManagement>
 		<repository>
 			<name>IU Maven Repository</name>
