STARCH-569 prune workflow triggers

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -1,11 +1,4 @@
-name: iu-js Ephemeral Branch
-
-on:
-  push:
-    branches: [ feature/* ]
-
-  workflow_dispatch:
-    on: push
+name: verify
 
 env:
   TZ: America/Indianapolis
