STARCH-569 maven cache setup

--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -11,6 +11,7 @@ jobs:
 
     steps:
     - uses: actions/cache@v3
+    - name: maven
       with:
         path: ~/.m2/repository
         key: m2_repository
