--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -10,19 +10,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/cache@v3
     - name: maven
+    - uses: actions/cache@v3
       with:
         path: ~/.m2/repository
         key: m2_repository
 
     - uses: actions/checkout@v3
-    - name: Set up JDK 17
-      uses: actions/setup-java@v3
+
+    - uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
         cache: maven
-    - name: mvn verify
-      run: mvn verify
+
+    - run: mvn verify
 
