--- a/.github/workflows/verify.yml
+++ b/.github/workflows/verify.yml
@@ -10,13 +10,18 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: maven
+    - uses: actions/cache@v3
+      with:
+        path: ~/.m2/repository
+        key: m2_repository
+
     - uses: actions/checkout@v3
 
     - uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
-        cache: maven
 
     - run: mvn verify
 
