STARCH-569 simplify front end build, verify maven cache setup

--- a/util/package.json
+++ b/util/package.json
@@ -23,6 +23,7 @@
     },
     "dependencies": {},
     "scripts": {
-        "test": "jest --coverage"
+        "test": "jest --coverage",
+        "build": "webpack && webpack --config webpack-release.config.js"
     }
 }
