--- a/.github/workflows/ephemeral-branch.yml
+++ b/.github/workflows/ephemeral-branch.yml
@@ -58,11 +58,13 @@ jobs:
          if: steps.compile.outcome == 'success'
          run: |
           git config --global --add safe.directory $PWD
-          git fetch origin github_pages
-          git checkout github_pages || {
+          if (git fetch origin github_pages)
+          then
+            git checkout github_pages
+          else
             git checkout -b github_pages
             git push --set-upstream origin/github_pages
-          }
+          fi
           git pull
           rm -rf docs/$GITHUB_REF_NAME
           mkdir -p docs/$GITHUB_REF_NAME
