--- a/.github/workflows/ephemeral-branch.yml
+++ b/.github/workflows/ephemeral-branch.yml
@@ -74,9 +74,11 @@ jobs:
             mkdir -p $t
             mv $a $t
           done
-          git config user.name eshrastg
-          git config user.email ess-dev-l@iu.edu
-          git add docs
-          git commit -m "publish $GITHUB_ACTOR $GITHUB_REF_NAME"
-          git push
+          git commit --dry-run && {
+            git config user.name eshrastg
+            git config user.email ess-dev-l@iu.edu
+            git add docs
+            git commit -m "publish $GITHUB_ACTOR $GITHUB_REF_NAME"
+            git push
+          }
 
