--- a/.github/workflows/ephemeral-branch.yml
+++ b/.github/workflows/ephemeral-branch.yml
@@ -74,11 +74,12 @@ jobs:
             mkdir -p $t
             mv $a $t
           done
-          git commit --dry-run && {
+          if (git commit --dry-run)
+          then
             git config user.name eshrastg
             git config user.email ess-dev-l@iu.edu
             git add docs
             git commit -m "publish $GITHUB_ACTOR $GITHUB_REF_NAME"
             git push
-          }
+          fi
 
