--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -55,8 +55,13 @@ jobs:
          if: steps.verify.outcome == 'success'
          run: |
           git config --global --add safe.directory $PWD
-          git fetch origin github_pages
-          git checkout github_pages
+          if (git fetch origin github_pages)
+          then
+            git checkout github_pages
+          else
+            git checkout -b github_pages
+            git push --set-upstream origin github_pages
+          fi
           git pull
           rm -rf docs/$GITHUB_REF_NAME
           mkdir -p docs/$GITHUB_REF_NAME
@@ -66,9 +71,11 @@ jobs:
             mkdir -p $t
             mv $a $t
           done
-          git config user.name eshrastg
-          git config user.email ess-dev-l@iu.edu
-          git add docs
-          git commit -m "publish $GITHUB_ACTOR $GITHUB_REF_NAME"
-          git push
-          
+          if (git add docs && git commit --dry-run)
+          then
+            git config user.name eshrastg
+            git config user.email ess-dev-l@iu.edu
+            git commit -m "publish $GITHUB_ACTOR $GITHUB_REF_NAME"
+            git push
+          fi
+
