--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>edu.iu.util</groupId>
 		<artifactId>iu-java-parent</artifactId>
-		<version>7.0.0-SNAPSHOT</version>
+		<version>7.0.4</version>
 		<relativePath />
 	</parent>
 
@@ -30,8 +30,8 @@
 					<artifactId>frontend-maven-plugin</artifactId>
 					<version>1.12.1</version>
 					<configuration>
-						<nodeVersion>v16.16.0</nodeVersion>
-						<npmVersion>8.11.0</npmVersion>
+						<nodeVersion>v20.17.0</nodeVersion>
+						<npmVersion>10.8.2</npmVersion>
 						<installDirectory>${project.build.directory}/js</installDirectory>
 					</configuration>
 					<executions>
